norbloc-kustomize/base/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.9.4-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wp-storage-wire
          mountPath: /var/www/html/wp-content
      volumes:
      - name: wp-storage-wire
        persistentVolumeClaim:
          claimName: wordpress-pvc
